z-index helpers fixing #35

--- a/client/assets/scss/base/_grid.scss
+++ b/client/assets/scss/base/_grid.scss
@@ -30,7 +30,6 @@ $grid-breakpoints: (
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
 @include _assert-starts-at-zero($grid-breakpoints);
 
-
 // The Grid - Based on Bootstrap Flexbox grid
 //// Max width Media Query Example: (xs,sm,md,lg,xl)
 //// @include media-breakpoint-up(xs) { ... }
@@ -94,6 +93,7 @@ html {
 		$infix: breakpoint-infix($breakpoint, $grid-breakpoints);
 		$spacing: 0,5,10,15,20,30,40,50,60,70,80,90,100;
 		$spacetype: px;
+		$zindexs: 1,5,10,15,20,25,100;
 
 		// Displays
 		//// e.g .d-sm-inline .d-md-block
@@ -165,6 +165,9 @@ html {
 			.mb#{$infix}-#{$space} {margin-bottom: #{$space}$spacetype;}
 			.ml#{$infix}-#{$space} {margin-left: #{$space}$spacetype;}
 			.mr#{$infix}-#{$space} {margin-right: #{$space}$spacetype;}
+		}
+		@each $zindex in $zindexs {
+			.zindex#{$infix}-#{$zindex} {z-index: #{$zindex}}
 		}
 	}
 }
